Working Situated Simulation into VTW chapter.

--- a/04_vtw/vtw.tex
+++ b/04_vtw/vtw.tex
@@ -76,6 +76,38 @@ Whereas many heritage representations, architectural walkthroughs and simulation
 
 %=========================================================================================================
 
+\subsection{Situated Simulation}
+\label{situated-simulation}
+One application of alternate reality techniques to the field of cultural heritage that warrants particular attention is that of `situated simulation' (sitsim)~\cite{Liestøl2009}. Since 2009, Liestøl et al. have investigated the use of smartphones (and later, tablets) to present visitors to cultural heritage sites with Unity based 3D reconstructions, using the location and orientation sensors built into the devices to appropriately move the virtual vantage as the user moves around the site.
+
+\begin{quote}
+	\textit{``When using a situated simulation there is then approximate identity between the user’s visual perspective and perception of the real physical environment, and the user’s perspective in(to) the virtual environment as this is audiovisually presented by means of the phone and sitsim’s interface. The relative congruity between the `real' and the `virtual' is obtained by allowing the camera’s position, movement and orientation in the 3D environment, to be constrained by the orientation- and location technology of the smartphone: As the user moves the phone in real space the perspective inside the virtual space changes accordingly.''}~\cite{Liestøl2011}
+\end{quote}
+
+These sitsim systems have been labelled by their creators as examples of `indirect augmented reality', a concept introduced by Wither at al.~\cite{Wither2011} to alleviate the dependency of traditional augmented reality systems upon very accurate position and orientation data in order to successfully position virtual objects at the correct position upon camera feeds of the real world. Their approach is that of forgoing a live camera feed of the real environment in place of previously captured panoramic photographs, allowing for zero registration error between virtual objects and these photographs and instead moving this registration error to the edges of the device's screen where the photographs meet the real environment they were captured from. The effect is to improve the perceived quality of registration between virtual objects and real background, as registration error at the screen's edges is perceived as being `better' than between virtual objects and real background upon the screen, in the same manner that parallel reality was posited in section \ref{caseforpr} as having relaxed registration requirements over augmented reality implementations.
+
+\begin{quote}
+	\textit{`Moving registration error to the edge of the screen is better in part because it is a more difficult place to detect error due to both the bezel around the screen, and the altered field-of-view parameters of the on-screen image. In many ways, people are also already trained to believe that when they see a view of the real world on the screen of the mobile device it lines up with the world behind it. This is largely due to the proliferation of digital cameras already using the screen as a viewfinder.''}~\cite{Wither2011}
+\end{quote}
+
+However likening the Unity based virtual environments of sitsim systems to the panoramic photographs of indirect augmented reality does not sit well with the alternate reality definitions adopted by this thesis. Fundamentally, the indirect augmented reality platforms presented by Wither et al. still present the user via the screen of the device a view of the real environment upon which virtual objects are placed, even though that view is no longer `live' but is instead a previously captured photograph. The sitsim platforms presented by Liestøl et al. however present via the screen of the device a view of a complete virtual environment rather than a mediated image of the real environment onto which individual virtual objects are placed.
+
+Whilst one could argue that the experience of using a sitsim platform is similar to that of an indirect augmented reality platform, even if it is the human mind that is ultimately performing the `mixing' of the virtual environment with the real environment whilst in a `true' indirect augmented reality platform the mixing of virtual objects and real environment is performed upon the device, a distinction should be made to appreciate that a sitsim system nonetheless presents users with two complete environments, one real and the other virtual, both complete unto themselves, rather than a single environment consisting of a real primary environment augmented by virtual objects. This distinction was raised by Liestøl et al. and visualised upon the reality-virtuality continuum in figure \ref{sitsim-1.png} taken from~\cite{Liestøl2011} (compare this with the explanation of parallel reality in section \ref{positionofcrossreality} around figure \ref{virtuality-continuum-cross-reality-1}).
+
+\begin{figure}[h]
+\centering
+  \includegraphics[width=.6\linewidth]{sitsim-1.png}
+  \caption{The two complete environments of a sitsim platform.}
+  \label{sitsim-1.png}
+\end{figure}
+
+In doing so, sitsim becomes a potential basis for investigation of the parallel reality concept in scenarios with high spatial equivalence; indeed, Liestøl's notion of `approximate identity' and the use of the term `situated' in the concept's title can be considered directly related to the concept of spatial equivalence discussed in section \ref{spatial-equivalence}.
+
+
+%sitsim-2.png
+
+%=========================================================================================================
+
 \subsection{Virtual Heritage at the University of St Andrews}
 
 \label{virtual-heritage-at-st-andrews}
